Test/kubernetes-wordpress-ingress/db-tier-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  labels:
    app: wordpress
spec:
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
  selector:
    app: wordpress
    tier: database
  type: clusterIP
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: mariadb-pv-claim
  labels:
    app: wordpress
spec:
  accessModes:
    - ReadWriteOnce
  resources:
    requests:
      storage: 5Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: database
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: database
    spec:
      containers:
      - image: bitnami/mariadb:latest
        name: mariadb
        env:
        - name: MARIADB_ROOT_PASSWORD
          valueFrom:
            secretKeyRef:
              name: mariadb
              key: root_password
        - name: MARIADB_USER
          value: wordpress
        - name: MARIADB_PASSWORD
          valueFrom:
            secretKeyRef:
              name: mariadb
              key: password
        - name: MARIADB_DATABASE
          value: wordpress
        ports:
          - containerPort: 3306
            name: mariadb
        volumeMounts:
        - name: mariadb-persistent-storage
          mountPath: /bitnami/mariadb
      volumes:
      - name: mariadb-persistent-storage
        persistentVolumeClaim:
          claimName: mariadb-pv-claim
