Test/kubernetes-wordpress-ingress/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1  
kind: Ingress
metadata:  
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/ssl-services: "wordpress"
  labels:
    app: wordpress
spec:
  rules:
  - host: saadcloudways.ml
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress
            port:
              number: 80
