Test/kubernetes-wordpress-ingress/secrets.yaml
apiVersion: v1
kind: Secret
metadata:
  name: mariadb
  labels:
    app: wordpress
type: Opaque
data:
  password: RGVtbzEyMzQ1IQ==
  root_password: RGVtbzEyMzQ1IQ==
---
apiVersion: v1
kind: Secret
metadata:
  name: wordpress
  labels:
    app: wordpress
type: Opaque
data:
  password: RGVtbzEyMzQ1IQ==
